-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 8.0.0-rc0
-
Component/s: None
-
Query Execution
-
Fully Compatible
-
ALL
-
v8.0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Using a moved object
Using a moved object may lead to an unexpected/undefined behavior. An object is used after it's moved.
/src/mongo/db/pipeline/document_source_merge.cpp:397: USE_AFTER_MOVE 150854 "batchObject" is moved (indicated by "std::move(batchObject)").
/src/mongo/db/pipeline/document_source_merge.cpp:397: USE_AFTER_MOVE 150854 "batchObject" is used after it has been already moved.
- is caused by
-
SERVER-78010 Restructure streaming DocumentSources to make them exception safe.
-
- Closed
-