SERVER-89330: Fix use-after-move issue (#21679)

GitOrigin-RevId: 2f62091c39f3bf99600bd63375f2d2f732b97657